swagger current user
