# controllers/auth/addMetrics.js
@@ -1,10 +1,8 @@
-const BMR = require('../../helpers/BMR')
-// const { Metric } = require("../../models");
-const { User } = require('../../models')
+const BMR = require("../../helpers/BMR");
+const { User } = require("../../models");
 
 const addMetrics = async (req, res, next) => {
-	const { _id: owner, email } = req.user
-	console.log('===>>>owner', owner)
+  const { email } = req.user;
 
   const {
     height,
@@ -18,13 +16,11 @@ const addMetrics = async (req, res, next) => {
     birthday,
   } = req.body;
 
+  const resultBMR = BMR(height, currentWeight, levelActivity, age, sex);
+  console.log("resultBMR", resultBMR);
 
-	const resultBMR = BMR(height, currentWeight, levelActivity, age, sex)
-	console.log('resultBMR', resultBMR)
-
-	// const userData = await User.findById(owner);
-	// console.log("userData", userData);
-
+  // const userData = await User.findById(owner);
+  // console.log("userData", userData);
 
   const updatedUser = await User.findOneAndUpdate(
     { email },
@@ -49,8 +45,7 @@ const addMetrics = async (req, res, next) => {
     }
   );
 
+  res.status(200).json({ updatedUser });
+};
 
-	res.status(200).json({ updatedUser })
-}
-
-module.exports = addMetrics
+module.exports = addMetrics;
